--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Controle de Plantões - Larissa</title>
+    <title>Controle de Plantões</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
 <div class="container">
-    <h1>🏥 Plantões - Larissa</h1>
+    <h1>🏥 Plantões</h1>
 
     <div class="settings-toggle" onclick="toggleSettings()">⚙️ Gerenciar Feriados e Valor Hora</div>
     
@@ -19,7 +19,7 @@
                 Valor da Hora Base (R$)
                 <span class="info-icon" 
                       onclick="alert(this.getAttribute('data-tooltip'))"
-                      data-tooltip="CÁLCULO DO VALOR HORA:&#10;1. Pegue o valor total dos plantões normais no holerite.&#10;2. Divida pela quantidade de plantões feitos.&#10;3. Divida o resultado por 12 (horas).&#10;&#10;EXEMPLO (Larissa):&#10;R$ 3.046,72 ÷ 16 plantões = R$ 190,42 por plantão.&#10;R$ 190,42 ÷ 12 horas = R$ 15,87 a hora.">
+                      data-tooltip="CÁLCULO DO VALOR HORA:&#10;1. Pegue o valor total dos plantões normais no holerite.&#10;2. Divida pela quantidade de plantões feitos.&#10;3. Divida o resultado por 12 (horas).&#10;&#10;EXEMPLO:&#10;R$ 3.046,72 ÷ 16 plantões = R$ 190,42 por plantão.&#10;R$ 190,42 ÷ 12 horas = R$ 15,87 a hora.">
                     ?
                 </span>
             </label>
